fix: layout issues on header, index and content pages on mobile

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -51,6 +51,10 @@
 
 	:root {
 		--font-body: "Inter Variable", system-ui, sans-serif;
+		--vueuse-safe-area-top: 0px !important;
+  		--vueuse-safe-area-right: 0px !important;
+  		--vueuse-safe-area-bottom: 0px !important;
+  		--vueuse-safe-area-left: 0px !important;
 	}
 
 	:root,
@@ -58,6 +62,10 @@
 	#__nuxt {
 		block-size: 100%;
 		isolation: isolate;
+	}
+
+	html {
+		scrollbar-gutter: stable;
 	}
 
 	* {
@@ -231,6 +239,12 @@
 		--tw-prose-pre-bg: var(--color-neutral-800);
 		--tw-prose-th-borders: var(--color-neutral-300);
 		--tw-prose-td-borders: var(--color-neutral-200);
+
+		overflow-wrap: break-word;
+	}
+
+	.prose a {
+		overflow-wrap: break-word;
 	}
 
 	[data-ui-color-scheme="dark"] .prose {
